Touch: make the knob align correctly
Make the knob align correctly on touch devices. Please test.

--- a/src/L.Control.Zoomslider.css
+++ b/src/L.Control.Zoomslider.css
@@ -80,12 +80,16 @@
 	background-position: 10px 0px;
 }
 .leaflet-touch .leaflet-control-zoomslider-knob {
-	width:16px;
-	margin-left: -1px;
+	width: 16px;
+	margin-left: -7px;
 }
 .leaflet-touch .leaflet-control-zoomslider a {
 	width: 30px;
-	height: 30px;
+	line-height: 30px;
+}
+.leaflet-touch .leaflet-control-zoomslider a:hover {
+	width: 30px;
+	line-height: 30px;
 }
 .leaflet-touch .leaflet-control-zoomslider-in {
 	font-size: 24px;
@@ -97,7 +101,5 @@
 }
 .leaflet-touch .leaflet-control-zoomslider {
 	box-shadow: none;
-}
-.leaflet-touch .leaflet-control-zoomslider {
 	border: 4px solid rgba(0,0,0,0.3);
 }
